# easyaligner

./: README.md  about.html  index.html  pyproject.toml  search.json
_assets/: taleoftwocities_01_dickens_128kb_known.json  taleoftwocities_01_dickens_128kb_unknown.json  taleoftwocities_01_dickens_64kb_align.json  taleoftwocities_01_dickens_64kb_trimmed.json
docs/: _quarto.yml  index.qmd  objects.json  styles.css
get-started/: demo.js  logging_error.html  overview.html  search.html  text_processing.html  tutorial01.html  tutorial02.html  tutorial03.html
reference/: AlignmentSegment.html  AudioChunk.html  AudioMetadata.html  FuzzyMatch.html  SpeechSegment.html  WordSegment.html  alignment_pipeline.html  alignment_pipeline_generator.html  data.dataset.AudioFileDataset.html  data.dataset.JSONMetadataDataset.html  data.dataset.MsgpackMetadataDataset.html  data.dataset.StreamingAudioFileDataset.html  data.utils.read_json.html  easyaligner.data.dataset.AudioFileDataset.get_speech_features.html  easyaligner.data.dataset.AudioFileDataset.get_vad_features.html  easyaligner.text.normalization.SpanMapNormalizer.get_token_map.html  easyaligner.text.normalization.SpanMapNormalizer.transform.html  emissions_pipeline.html  emissions_pipeline_generator.html  index.html  match.fuzzy_match.html  normalization.SpanMapNormalizer.html  normalization.text_normalizer.html  pipeline.html  tokenizer.load_tokenizer.html  vad_pipeline.html  vad_pipeline_generator.html
scripts/: align_known_segment.py  align_unknown_segment.py  separate_pipelines.py
tutorials/: tale_of_two_cities.html
(+38 files in other folders)
